fix(style): post h1 and math overflow

--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -13,6 +13,7 @@
   @apply
     mt-6
     font-bold text-3xl
+    break-words
   ;
 }
 
@@ -20,6 +21,7 @@
   @apply
     mt-5
     font-bold text-2xl
+    break-words
   ;
 }
 
@@ -176,6 +178,16 @@
     p-3 rounded max-w-full
     overflow-x-auto
   ;
+}
+
+#md div.math-display {
+  @apply
+    overflow-x-auto;
+}
+
+#md div.math-display > span.katex-display {
+  @apply
+    my-1 mx-0;
 }
 
 #md p {
